Bug 155181 - Crash when Jabber protocol does not provide identity for transport account
Summary: Crash when Jabber protocol does not provide identity for transport account
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-06 13:25 UTC by Nizovtsev Sergey
Modified: 2008-03-08 15:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Debug output (296.04 KB, text/plain)
2008-01-06 13:27 UTC, Nizovtsev Sergey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nizovtsev Sergey 2008-01-06 13:25:53 UTC
Version:           0.50.0svn (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

I have 2 accounts in Kopete:
1. Jabber with ICQ transport
2. ICQ
When Kopete has opened, i have clicked to connect Jabber. Next, i have clicked on icon in the system tray (right button) and Kopete crashes.

Backtrace:
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1244121408 (LWP 4839)]
[KCrash handler]
#6  Kopete::PropertyContainer::hasProperty (this=0x0, key=@0x83e7920)
    at /home/kde-devel/kde4svn/kdenetwork/kopete/libkopete/kopetepropertycontainer.cpp:109
#7  0xb427f015 in JabberTransport::actionMenu (this=0x895a2e0)
    at /home/kde-devel/kde4svn/kdenetwork/kopete/protocols/jabber/jabbertransport.cpp:130
#8  0x0808f053 in KopeteWindow::slotTrayAboutToShowMenu (this=0x815b8d8, 
    popup=0x837c4a8)
    at /home/kde-devel/kde4svn/kdenetwork/kopete/kopete/kopetewindow.cpp:924
#9  0x080938e6 in KopeteWindow::qt_metacall (this=0x815b8d8, 
    _c=QMetaObject::InvokeMetaMethod, _id=26, _a=0xbfb0ecf0)
    at /home/kde-devel/kde4build/kdenetwork/kopete/kopete/kopetewindow.moc:151
#10 0xb7f02f7a in QMetaObject::activate (sender=0x837c8a0, 
    from_signal_index=18, to_signal_index=18, argv=<value optimized out>)
    at /home/kde-devel/kde4svn/qt-copy/src/corelib/kernel/qobject.cpp:3087
#11 0xb7f03862 in QMetaObject::activate (sender=0x837c8a0, m=0x80a3160, 
    local_signal_index=0, argv=0xbfb0ecf0)
    at /home/kde-devel/kde4svn/qt-copy/src/corelib/kernel/qobject.cpp:3149
#12 0x0808c035 in KopeteSystemTray::aboutToShowMenu (this=0x837c8a0, 
    _t1=0x837c4a8)
    at /home/kde-devel/kde4build/kdenetwork/kopete/kopete/systemtray.moc:96
#13 0x0808c2ae in KopeteSystemTray::slotAboutToShowMenu (this=0x837c8a0)
    at /home/kde-devel/kde4svn/kdenetwork/kopete/kopete/systemtray.cpp:107
#14 0x0808d8d9 in KopeteSystemTray::qt_metacall (this=0x837c8a0, 
    _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfb0edac)
    at /home/kde-devel/kde4build/kdenetwork/kopete/kopete/systemtray.moc:79
#15 0xb7f02f7a in QMetaObject::activate (sender=0x837c4a8, 
    from_signal_index=27, to_signal_index=27, argv=<value optimized out>)
    at /home/kde-devel/kde4svn/qt-copy/src/corelib/kernel/qobject.cpp:3087
#16 0xb7f03862 in QMetaObject::activate (sender=0x837c4a8, m=0xb7552038, 
    local_signal_index=0, argv=0x0)
    at /home/kde-devel/kde4svn/qt-copy/src/corelib/kernel/qobject.cpp:3149
#17 0xb731ffd7 in QMenu::aboutToShow (this=0x837c4a8)
    at .moc/release-shared/moc_qmenu.cpp:142
#18 0xb73251b8 in QMenu::popup (this=0x837c4a8, p=@0xbfb0f384, atAction=0x0)
    at /home/kde-devel/kde4svn/qt-copy/src/gui/widgets/qmenu.cpp:1611
#19 0xb74b77b7 in QSystemTrayIconSys::mousePressEvent (this=0x83824b0, 
    ev=0xbfb0f868)
    at /home/kde-devel/kde4svn/qt-copy/src/gui/util/qsystemtrayicon_x11.cpp:197
#20 0xb702844c in QWidget::event (this=0x83824b0, event=0xbfb0f868)
    at /home/kde-devel/kde4svn/qt-copy/src/gui/kernel/qwidget.cpp:6134
#21 0xb74b7360 in QSystemTrayIconSys::event (this=0x0, e=0x1)
    at /home/kde-devel/kde4svn/qt-copy/src/gui/util/qsystemtrayicon_x11.cpp:223
#22 0xb6fe4ff0 in QApplicationPrivate::notify_helper (this=0x80c2660, 
    receiver=0x83824b0, e=0xbfb0f868)
    at /home/kde-devel/kde4svn/qt-copy/src/gui/kernel/qapplication.cpp:3556
#23 0xb6feb167 in QApplication::notify (this=0xbfb0ff7c, receiver=0x83824b0, 
    e=0xbfb0f868)
    at /home/kde-devel/kde4svn/qt-copy/src/gui/kernel/qapplication.cpp:3255
#24 0xb798321a in KApplication::notify (this=0xbfb0ff7c, receiver=0x83824b0, 
    event=0xbfb0f868)
    at /home/kde-devel/kde4svn/kdelibs/kdeui/kernel/kapplication.cpp:314
#25 0xb7ef14eb in QCoreApplication::notifyInternal (this=0xbfb0ff7c, 
    receiver=0x83824b0, event=0xbfb0f868)
    at /home/kde-devel/kde4svn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:530
#26 0xb703adb6 in QETWidget::translateMouseEvent (this=0x83824b0, 
    event=0xbfb0fca8)
    at ../../include/QtCore/../../../../kde4svn/qt-copy/src/corelib/kernel/qcoreapplication.h:203
#27 0xb703a43f in QApplication::x11ProcessEvent (this=0xbfb0ff7c, 
    event=0xbfb0fca8)
    at /home/kde-devel/kde4svn/qt-copy/src/gui/kernel/qapplication_x11.cpp:2918
#28 0xb705da74 in x11EventSourceDispatch (s=0x80c6060, callback=0, 
    user_data=0x0)
    at /home/kde-devel/kde4svn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:135
#29 0xb612f11c in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0xb613255f in ?? () from /usr/lib/libglib-2.0.so.0
#31 0x080c5698 in ?? ()
#32 0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Nizovtsev Sergey 2008-01-06 13:27:54 UTC
Created attachment 22867 [details]
Debug output

Kopete console output, it has been compiled with debug.
Comment 2 Nizovtsev Sergey 2008-01-06 13:32:16 UTC
When i have deleted icq transport (from other client) Kopete work fine.
Comment 3 Dmitriy Taychenachev 2008-01-06 13:46:38 UTC
I have the same bug with jabber, transport's accound doesn't have identity and hasProperty call fails.
Comment 4 Roman Jarosz 2008-03-08 15:30:53 UTC
SVN commit 783532 by rjarosz:

Fix bug 155181: Crash when Jabber protocol does not provide identity for transport account.
Fix crash when transport configuration dialog is opened for offline jabber account.

BUG: 155181



 M  +2 -0      jabbercontact.cpp  
 M  +1 -1      jabberprotocol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=783532
Comment 5 Roman Jarosz 2008-03-08 15:31:21 UTC
SVN commit 783533 by rjarosz:

Backport commit 783532.
Fix bug 155181: Crash when Jabber protocol does not provide identity for transport account.
Fix crash when transport configuration dialog is opened for offline jabber account.

CCBUG: 155181



 M  +2 -0      jabbercontact.cpp  
 M  +1 -1      jabberprotocol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=783533