Fix bug 155181: Crash when Jabber protocol does not provide identity for transport account. Fix crash when transport configuration dialog is opened for offline jabber account.

BUG: 155181


svn path=/trunk/KDE/kdenetwork/kopete/; revision=783532