protocols/jabber/jabbercontact.cpp
@@ -1337,6 +1337,8 @@ void JabberContact::slotDiscoFinished( )
 		JabberTransport *transport = new JabberTransport( parentAccount , ri , tr_type );
 		if(!Kopete::AccountManager::self()->registerAccount( transport ))
 			return;
+		
+		transport->setIdentity( parentAccount->identity() );
 		transport->myself()->setOnlineStatus( status ); //push back the online status
 		return;
 	}
